--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lattice Works – Fast, High-Production Software Systems</title>
-  <meta name="description" content="Lattice Works is a small, anonymous studio that designs and ships high-production web apps, dashboards, and internal systems with speed and precision." />
+  <meta
+    name="description"
+    content="Lattice Works is a small, anonymous studio that designs and ships high-production web apps, dashboards, and internal systems in weeks, not quarters."
+  />
   <style>
     :root {
       --bg: #020617;
@@ -339,34 +342,6 @@
       border: 1px dashed rgba(56,189,248,0.5);
     }
 
-    .hero-orbit-badge {
-      position: absolute;
-      right: 6%;
-      top: 54%;
-      transform: translateY(-50%);
-      background: rgba(15,23,42,0.98);
-      border-radius: 16px;
-      padding: 8px 10px;
-      border: 1px solid rgba(56,189,248,0.7);
-      font-size: 11px;
-      display: flex;
-      flex-direction: column;
-      gap: 2px;
-      min-width: 160px;
-    }
-
-    .hero-orbit-badge span:first-child {
-      text-transform: uppercase;
-      letter-spacing: 0.13em;
-      color: var(--muted);
-      font-size: 9px;
-    }
-
-    .hero-orbit-badge span:last-child {
-      color: #e5e7eb;
-      font-size: 11px;
-    }
-
     @media (max-width: 860px) {
       .hero-orbit {
         display: none;
@@ -669,10 +644,10 @@
       <div class="pill-row">
         <div class="pill pill-strong">
           <span class="pill-dot"></span>
-          <span>Builds shipped in weeks, not quarters</span>
+          <span>Builds delivered in weeks, not quarters</span>
         </div>
         <div class="pill">
-          <span>Small studio • No hype • Just delivery</span>
+          <span>Small studio • No noise • Just results</span>
         </div>
       </div>
     </header>
@@ -682,7 +657,7 @@
       <section class="hero-card">
         <div class="hero-tag">
           <div class="hero-tag-icon"></div>
-          <span>Production-ready, shipped fast</span>
+          <span>Production-ready, built fast</span>
         </div>
 
         <h1 class="hero-title">
@@ -692,24 +667,24 @@
         <p class="hero-subtitle">
           Lattice Works is a small, anonymous studio that designs and ships
           <b>web apps, dashboards, and internal systems</b> with a bias toward speed
-          and polish. The goal is simple: production value that looks like you’ve
-          hired a full team, built by one operator.
+          and production value. The output looks like a team built it — the process
+          runs like one operator.
         </p>
 
         <div class="hero-metrics">
           <div class="metric">
-            <strong>Full builds, scoped as systems</strong>
-            <span>From wireframe → production with clean handoff.</span>
+            <strong>End-to-end, treated as systems</strong>
+            <span>From rough notes → architecture → production, with a clean handoff path baked in.</span>
           </div>
           <div class="metric">
             <strong>Weeks, not quarters</strong>
-            <span>Typical work is broken into tight, shippable phases.</span>
+            <span>Work is sliced into tight phases that can ship independently without waiting on a big release.</span>
           </div>
         </div>
 
         <div class="hero-buttons">
           <a
-            href="mailto:projects@lattice.works?subject=Project%20inquiry&body=Share%20a%20short%20description%20of%20what%20you%20want%20built%2C%20who%20it%27s%20for%2C%20and%20your%20ideal%20timeline."
+            href="mailto:projects@lattice.works?subject=Project%20inquiry&body=Share%20a%20short%20description%20of%20what%20you%20want%20built%2C%20who%20it%27s%20for%2C%20why%20it%20matters%20now%2C%20and%20any%20timeline%20constraints."
             class="btn-primary"
           >
             <span>✉️</span>
@@ -722,14 +697,13 @@
         </div>
 
         <p class="hero-note">
-          No filler pages, no marketing fluff — just product engineering, UI,
-          and backend design for things that ship.
+          No filler pages, no brand theater — just product, architecture, and code aligned on shipping.
         </p>
 
         <div class="hero-list">
           <div class="chip">
             <span class="chip-label">01</span>
-            <span>Trading / screener dashboards wired to real data</span>
+            <span>Trading & screener dashboards ready to plug into live data</span>
           </div>
           <div class="chip">
             <span class="chip-label">02</span>
@@ -737,7 +711,7 @@
           </div>
           <div class="chip">
             <span class="chip-label">03</span>
-            <span>MVP web apps that don’t feel like prototypes</span>
+            <span>MVP web apps that feel like products, not throwaway prototypes</span>
           </div>
           <div class="chip">
             <span class="chip-label">04</span>
@@ -747,10 +721,6 @@
 
         <div class="hero-orbit">
           <div class="hero-orbit-inner"></div>
-          <div class="hero-orbit-badge">
-            <span>Working style</span>
-            <span>Written-first, low-ceremony, focused on getting to a real build quickly.</span>
-          </div>
         </div>
       </section>
 
@@ -760,7 +730,7 @@
           <div class="section-label">Focus</div>
           <div class="mini-title">Where Lattice Works spends time</div>
           <div class="mini-sub">
-            A narrow band of work that compounds: each project improves the next.
+            A narrow band of product and systems work, reused and refined across projects.
           </div>
           <div class="pill-grid">
             <span class="pill-small">Web apps & product UIs</span>
@@ -774,13 +744,13 @@
         <div class="stack-section">
           <div class="mini-title">What “high-production” means here</div>
           <div class="mini-sub">
-            Not a hacked-together prototype. A build you’re not embarrassed to demo.
+            Not a hacked-together demo. A build you’re comfortable putting in front of customers or a team.
           </div>
           <div class="pill-grid">
             <span class="pill-small">Clean, modern frontends</span>
-            <span class="pill-small">Thought-out data models</span>
+            <span class="pill-small">Deliberate data models</span>
             <span class="pill-small">Clear API surfaces</span>
-            <span class="pill-small">Readable, handoff-able code</span>
+            <span class="pill-small">Readable, handoff-ready code</span>
             <span class="pill-small">Docs that don’t rot immediately</span>
           </div>
         </div>
@@ -788,11 +758,11 @@
         <div class="stack-section">
           <div class="mini-title">Typical stack</div>
           <div class="mini-sub">
-            Chosen per project. Tools change; principles (clarity & speed) don’t.
+            Stack flexes per project. The constant is clear boundaries and predictable behavior.
           </div>
           <div class="pill-grid">
             <span class="pill-small">TypeScript / JavaScript</span>
-            <span class="pill-small">React / Next.js or similar</span>
+            <span class="pill-small">Static sites & React frontends</span>
             <span class="pill-small">FastAPI / Node APIs</span>
             <span class="pill-small">PostgreSQL / SQL</span>
             <span class="pill-small">Stripe / payment rails</span>
@@ -807,8 +777,8 @@
       <article class="card">
         <h2>How projects run</h2>
         <p>
-          The goal is to get from “idea in your head” to “real thing on a screen”
-          without dragging a committee through it.
+          The goal is simple: move from “this lives in my head” to “this is live”
+          without dragging a committee through every decision.
         </p>
         <ul class="steps">
           <li class="step">
@@ -816,8 +786,8 @@
             <div>
               <div class="step-title">Outline</div>
               <div class="step-text">
-                You send a short description: what you want built, who it’s for, and
-                why it matters now. Links, sketches, and rough notes are welcome.
+                You send a short description: what you want built, who it’s for, why
+                it matters now, and any constraints. Links, sketches, and rough notes are welcome.
               </div>
             </div>
           </li>
@@ -826,9 +796,9 @@
             <div>
               <div class="step-title">Architecture & scope</div>
               <div class="step-text">
-                Lattice Works replies with clarifying questions and a proposed shape
-                for the system: core entities, surfaces, and phases that can ship
-                independently.
+                You get clarifying questions and a proposed shape for the system:
+                core entities, surfaces, and phases that can ship independently
+                instead of one giant, brittle release.
               </div>
             </div>
           </li>
@@ -837,8 +807,9 @@
             <div>
               <div class="step-title">Phases & pricing</div>
               <div class="step-text">
-                Work is split into phases (e.g., core UI, core backend, enrichment
-                features). Each phase has a fixed price and clear acceptance criteria.
+                Work is split into clear phases (for example: core UI, core backend,
+                enrichment features). Each has a fixed price and concrete acceptance
+                criteria so it’s obvious when a phase is “done.”
               </div>
             </div>
           </li>
@@ -847,8 +818,8 @@
             <div>
               <div class="step-title">Build loops</div>
               <div class="step-text">
-                You get regular written updates, preview links, and chances to steer
-                details while the core direction stays stable.
+                You get written updates, preview links, and chances to adjust the
+                details while the core direction stays stable and shipping-focused.
               </div>
             </div>
           </li>
@@ -857,9 +828,9 @@
             <div>
               <div class="step-title">Handoff</div>
               <div class="step-text">
-                Deliverables include the code, basic docs, and notes for whoever
-                maintains it next — whether that’s an internal team or Lattice Works
-                on a later phase.
+                Deliverables include code, a basic implementation note, and guidance
+                for whoever owns it next — an internal team, another vendor, or a
+                later phase with Lattice Works.
               </div>
             </div>
           </li>
@@ -870,31 +841,36 @@
         <article class="card">
           <h2>Representative builds</h2>
           <p>
-            Names and logos are kept off the page. Below are simplified versions of
-            the kinds of systems Lattice Works ships.
+            Names and logos stay off the page by design. These are simplified examples of
+            MVPs, in-progress systems, and shipped work.
           </p>
           <ul class="project-list">
             <li class="project-item">
-              <h3>Referral payout system with wallet validation</h3>
+              <h3>Referral payout dashboard MVP with wallet validation</h3>
               <div class="project-meta">
-                Dashboard • crypto wallet checks • fraud-resistant payouts
+                Dashboard • crypto wallet checks • review & approval workflow
               </div>
               <p>
-                Designed and implemented a referral dashboard that lets a team
-                review, validate, and approve payouts tied to wallet activity.
-                The result: fewer fake submissions, faster processing, and a UI
-                simple enough for non-technical operators.
+                Built a functional referral dashboard MVP that lets a team review,
+                validate, and approve payout requests tied to wallet activity. The
+                dashboard and flows are fully implemented as an interface and system
+                design. Integration with the client’s internal payout rails and
+                automated fake-request safeguards is planned but not yet deployed,
+                so the current build serves as a concrete, ready-to-integrate phase one.
               </p>
             </li>
             <li class="project-item">
-              <h3>Multi-asset trading screener UI</h3>
+              <h3>Multi-asset trading screener surface</h3>
               <div class="project-meta">
-                Landing page • member dashboard • backend blueprint
+                Landing page • early member dashboard UI • backend just starting
               </div>
               <p>
-                Built a marketing site and logged-in dashboard for a community
-                screener product, plus the backend architecture for phased rollout
-                of FX/crypto/equity filters and premium tiers.
+                Designed and implemented the front end for a screener product:
+                a marketing site plus an initial member dashboard UI for screening
+                FX/crypto/equities. The dashboard frontend is partially complete and
+                currently runs on mocked data while backend models and endpoints are
+                being built. The work is structured so real data and premium tiers
+                can be wired in as a next phase rather than a full rebuild.
               </p>
             </li>
             <li class="project-item">
@@ -903,9 +879,11 @@
                 Internal dashboards • metrics • control panels
               </div>
               <p>
-                Turned a tangle of spreadsheets and ad-hoc scripts into focused
-                dashboards and control panels so founders could see what was going
-                on, change key values, and stop asking devs for one-off reports.
+                Replaced a tangle of spreadsheets and ad-hoc scripts with focused
+                dashboards and control panels so founders could see what was going on,
+                adjust key values, and stop requesting one-off reports from devs.
+                Each tool was scoped to solve a specific operational problem, then
+                documented for future extension.
               </p>
             </li>
           </ul>
@@ -915,47 +893,47 @@
           <h2>Common questions</h2>
           <p>
             The studio is intentionally small, quiet, and execution-biased. A few
-            details up front:
+            things that help decide if it’s a fit:
           </p>
           <ul class="faq-list">
             <li class="faq-item">
               <h3>Who is behind Lattice Works?</h3>
               <p>
-                The studio is run anonymously by a single operator. The emphasis is
-                on shipped work, not personal branding. If you need a big glossy
-                team page, this isn’t that.
+                One operator, anonymous by design. The emphasis is on shipped work
+                and clear systems, not personal branding. If you need a glossy team
+                page and a big agency logo wall, this isn’t that.
               </p>
             </li>
             <li class="faq-item">
               <h3>How fast can something go live?</h3>
               <p>
-                It depends on scope, but the bias is toward short, complete phases.
-                A focused dashboard or v1 web app usually lands in weeks, not
-                quarters, when decisions are made quickly.
+                Scope-dependent, but the bias is toward short, complete phases.
+                A focused dashboard or v1 web app typically lands in weeks, not
+                quarters, when decisions are made quickly and ownership stays tight.
               </p>
             </li>
             <li class="faq-item">
               <h3>Will there be calls?</h3>
               <p>
-                Collaboration starts and mostly stays in writing. That’s how scopes
-                stay tight and decisions stay documented. If a rare call is truly
-                required, it’s treated as the exception, not the default.
+                Collaboration starts and mostly stays in writing so scopes stay
+                tight and decisions stay documented. If a call is needed, it’s the
+                exception — not the default way of working.
               </p>
             </li>
             <li class="faq-item">
               <h3>What size projects make sense?</h3>
               <p>
                 Best fits: single dashboards, targeted internal tools, v1 products,
-                and tightly defined subsystems inside a larger product. Long
-                multi-year roadmaps with unclear ownership are a worse fit.
+                and clearly defined subsystems inside a larger product. Long,
+                committee-driven roadmaps with shifting ownership are a poor fit.
               </p>
             </li>
             <li class="faq-item">
               <h3>Do you only do greenfield work?</h3>
               <p>
-                No. Plugging a new system into an existing product or refactoring a
-                rough MVP into something production-grade is common, as long as the
-                boundaries are clear.
+                No. Plugging a new system into an existing stack or turning a rough
+                MVP into something closer to production-grade is common, as long as
+                the boundaries and responsibilities are clear.
               </p>
             </li>
           </ul>
@@ -967,12 +945,12 @@
     <section class="contact-card" id="contact">
       <div class="contact-header">
         <h2>Open to one-off builds and phased engagements</h2>
-        <div class="badge">Designed to move fast without breaking everything</div>
+        <div class="badge">Built to move fast without blowing things up</div>
       </div>
       <p class="contact-body">
         If you already have a rough idea of what you want, a short written brief is
         enough to start. You’ll get a reply with follow-up questions, a suggested
-        shape for the work, and whether it’s a good fit.
+        shape for the work, and whether it’s a strong fit.
       </p>
 
       <div class="contact-grid">
@@ -1004,4 +982,3 @@
   </script>
 </body>
 </html>
-
