--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
       <div class="contact-actions">
         <a
           class="btn-primary"
-          href="mailto:projects@lattice.works?subject=Project%20inquiry&body=You%20can%20answer%20in%20a%20few%20lines%3A%0A%0A-%20What%20you%20want%20built%0A-%20Who%20it%27s%20for%0A-%20Why%20it%20matters%20now%0A-%20Any%20timeline%20constraints%0A-%20Links%20or%20docs%20if%20you%20have%20them%0A">
+          href="mailto:projects@latticeworks.us?subject=Project%20inquiry&body=You%20can%20answer%20in%20a%20few%20lines%3A%0A%0A-%20What%20you%20want%20built%0A-%20Who%20it%27s%20for%0A-%20Why%20it%20matters%20now%0A-%20Any%20timeline%20constraints%0A-%20Links%20or%20docs%20if%20you%20have%20them%0A">
           <span>✉️</span>
           <span>Send a brief</span>
         </a>
