--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- nudge deploy -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -686,7 +684,7 @@
 
         <div class="hero-buttons">
           <a
-            href="mailto:projects@lattice.works?subject=Project%20inquiry&body=Share%20a%20short%20description%20of%20what%20you%20want%20built%2C%20who%20it%27s%20for%2C%20why%20it%20matters%20now%2C%20and%20any%20timeline%20constraints."
+            href="mailto:projects@latticeworks.us?subject=Project%20inquiry&body=Share%20a%20short%20description%20of%20what%20you%20want%20built%2C%20who%20it%27s%20for%2C%20why%20it%20matters%20now%2C%20and%20any%20timeline%20constraints."
             class="btn-primary"
           >
             <span>✉️</span>
@@ -956,14 +954,14 @@
       </p>
 
       <div class="contact-grid">
-        <span>📧 <strong>Email</strong> <code>projects@lattice.works</code></span>
+        <span>📧 <strong>Email</strong> <code>projects@latticeworks.us</code></span>
         <span>📝 <strong>Helpful to include</strong> <code>what • who • why now • rough timeline</code></span>
       </div>
 
       <div class="contact-actions">
         <a
           class="btn-primary"
-          href="mailto:projects@lattice.works?subject=Project%20inquiry&body=You%20can%20answer%20in%20a%20few%20lines%3A%0A%0A-%20What%20you%20want%20built%0A-%20Who%20it%27s%20for%0A-%20Why%20it%20matters%20now%0A-%20Any%20timeline%20constraints%0A-%20Links%20or%20docs%20if%20you%20have%20them%0A">
+          href="mailto:projects@latticeworks.us?subject=Project%20inquiry&body=You%20can%20answer%20in%20a%20few%20lines%3A%0A%0A-%20What%20you%20want%20built%0A-%20Who%20it%27s%20for%0A-%20Why%20it%20matters%20now%0A-%20Any%20timeline%20constraints%0A-%20Links%20or%20docs%20if%20you%20have%20them%0A">
           <span>✉️</span>
           <span>Send a brief</span>
         </a>
