--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         <div class="hero-list">
           <div class="chip">
             <span class="chip-label">01</span>
-            <span>Zero-to-one MVPs for web or mobile in 2–6 weeks</span>
+            <span>Zero-to-one MVPs for web or mobile in weeks, not quarters</span>
           </div>
           <div class="chip">
             <span class="chip-label">02</span>
@@ -940,6 +940,7 @@
               <p>
                 One operator, anonymous by design. The emphasis is on clear systems,
                 reliable delivery, and calm communication — not personal branding.
+                A small studio also means a small number of active builds at a time.
               </p>
             </li>
           </ul>
@@ -996,5 +997,4 @@
   </script>
 </body>
 </html>
-
 
