--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
-      margin-bottom: 16px;
+      margin-bottom: 6px;
     }
 
     .btn-primary {
@@ -282,6 +282,12 @@
 
     .btn-secondary span:first-child {
       font-size: 14px;
+    }
+
+    .hero-inline-note {
+      font-size: 11px;
+      color: var(--muted);
+      margin-bottom: 6px;
     }
 
     .hero-note {
@@ -684,6 +690,10 @@
           </a>
         </div>
 
+        <p class="hero-inline-note">
+          Got an in-flight client already? You can just forward their brief to this email and I’ll reply with questions and a suggested architecture.
+        </p>
+
         <p class="hero-note">
           No pitch decks, no “founder story” monologue — just backend, automation,
           and internal product work oriented around shipping and being easy to work with.
@@ -921,6 +931,27 @@
             </p>
           </li>
         </ul>
+
+        <p class="mini-sub" style="margin-top:10px;">
+          Good fit if:
+        </p>
+        <ul class="project-list" style="margin-top:6px;">
+          <li class="project-item">
+            <p style="margin-bottom:4px;">
+              • You have a client asking for a dashboard, internal tool, or automation and don’t want to staff a full backend team.
+            </p>
+          </li>
+          <li class="project-item">
+            <p style="margin-bottom:4px;">
+              • An MVP or script is “kind of working” but not something you’d be comfortable putting in front of a real client.
+            </p>
+          </li>
+          <li class="project-item">
+            <p style="margin-bottom:0;">
+              • You want someone who can drop into an in-flight project, stabilize it, and then disappear or stay on in the background.
+            </p>
+          </li>
+        </ul>
       </article>
 
       <section class="card contact-card" id="contact">
@@ -931,7 +962,8 @@
         <p class="contact-body">
           If you already have a client or internal system in mind, a short written
           brief is enough to start. You’ll get a reply with follow-up questions,
-          a suggested shape for the work, and whether it’s a strong fit.
+          a suggested shape for the work, and whether it’s a strong fit. No long
+          retainer required — projects can stay tightly scoped.
         </p>
 
         <div class="contact-grid">
@@ -964,4 +996,5 @@
   </script>
 </body>
 </html>
+
 
